--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "devicon-react-svg": "^0.2.3",
-    "gh-pages": "^4.0.0",
     "install": "^0.13.0",
     "npm": "^8.10.0",
     "react": "^18.1.0",
@@ -46,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
